increased slide z index to avoid clipping

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -48,6 +48,7 @@ nav h1 {
 }
 
 .slide-menu{
+    z-index: 999;
     height: 100%;
     width: 200px;
     position: absolute;
